--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 id="mainTitle"></h1>
-    <button id="addButton" onclick="addButton()">Add</button>
-    <script src="js/app.js"></script>
+    <!--foreground-->
+    <!--background-->
+     <script src="js/app.js"></script>
 </body>
 </html>
