--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!--foreground-->
-    <!--background-->
+    <h1 id="mainTitle"></h1>
+    <div id="gameWindow">
+        <!--foreground layer-->
+
+        <!--main character layer-->
+        <div id="mainCharacter" class="gameObject gameCharacter">
+            <img src="img/character.png" alt="">
+        </div>
+        <!--background layer-->
+        <div id="tilemap" class="gameObject background">
+            <img  src="img/tilemap2.png" alt="">
+        </div>
+    </div>
+
      <script src="js/app.js"></script>
 </body>
 </html>
