--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <h1 id="mainTitle"></h1>
     <div id="gameWindow">
         <!--foreground layer-->
-
+        <div id="tree1" class="gameObject foreground">
+            <img src="img/tree.png" alt="">
+        </div>
+        <div id="door" class="gameObject foreground">
+            
+        </div>
         <!--main character layer-->
         <div id="mainCharacter" class="gameObject gameCharacter">
             <img src="img/character.png" alt="">
