--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <div id="door" class="gameObject foreground">
             
         </div>
+        <div id="doorAlert">
+            <h1>Welcome</h1>
+        </div>
         <!--main character layer-->
         <div id="mainCharacter" class="gameObject gameCharacter">
             <img src="img/character.png" alt="">
