--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 <body>
     <h1 id="mainTitle"></h1>
     <div id="gameWindow">
+        <!--dialog-bar-->
+        <div id="dialogBar" class="foreground">
+            <div id="setMainDialog">
+                <img id="hero" class="foreground" src="img/portrait.png" alt="portrait">
+                <div id="mainCharacterSpeech" class="foreground speech-bubble">...</div>
+
+                <div id="brownBar"></div>
+            </div>
+        </div>
         <!--foreground layer-->
         <div id="tree1" class="gameObject foreground">
             <img src="img/tree.png" alt="">
         </div>
         <div id="door" class="gameObject foreground">
             
-        </div>
-        <div id="doorAlert">
-            <h1>Welcome</h1>
         </div>
         <!--main character layer-->
         <div id="mainCharacter" class="gameObject gameCharacter">
