--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <div id="keyTree" class="gameObject foreground">
             <img src="img/tree.png" alt="">
         </div>
+        <div id="tree" class="gameObject foreground">
+            
+        </div>
         <div id="door" class="gameObject foreground">
             
         </div>
